--- a/.github/workflows/backend.yml
+++ b/.github/workflows/backend.yml
@@ -23,13 +23,14 @@ jobs:
         with:
           node-version: "16.x"
       - run: cd backend && npm install
+      - run: cd backend && npm test
       - run: cd backend && npm run build
 
       - name: Log in to Docker Hub
-        uses: docker/login-action@v1
+        uses: docker/login-action@v2
         with:
           username: ${{ secrets.DOCKERHUB_USERNAME }}
-          password: ${{ secrets.DOCKERHUB_TOKEN }}
+          password: ${{ secrets.DOCKERHUB_ACCESS_TOKEN }}
 
       - name: Build and Push Docker Image for Backend
         run: |
