--- a/.github/workflows/frontend.yml
+++ b/.github/workflows/frontend.yml
@@ -27,10 +27,10 @@ jobs:
       - run: cd frontend && npm run build
 
       - name: Log in to Docker Hub
-        uses: docker/login-action@v1
+        uses: docker/login-action@v2
         with:
           username: ${{ secrets.DOCKERHUB_USERNAME }}
-          password: ${{ secrets.DOCKERHUB_TOKEN }}
+          password: ${{ secrets.DOCKERHUB_ACCESS_TOKEN }}
 
       - name: Build and Push Docker Image for Frontend
         run: |
