--- a/backend/package.json
+++ b/backend/package.json
@@ -5,8 +5,8 @@
   "main": "index.js",
   "scripts": {
     "build": "tsc",
-    "start": "node dist/src/server.js",
-    "dev": "nodemon src/server.ts",
+    "start": "NODE_ENV=production node dist/src/server.js",
+    "dev": "NODE_ENV=development nodemon src/server.ts",
     "test": "jest"
   },
   "keywords": [],
